hphp/test/slow/parser/variable_in_enum2.php.expectf

Fatal error: Invalid expression in constant initializer in %s/variable_in_enum2.php on line 3
